Rid of com.degel/sodium
Styleguide fixes