@@ -18,14 +18,14 @@
                  [route-map "0.0.5"]
                  [com.andrewmcveigh/cljs-time "0.5.2"]
                  [soda-ash "0.76.0" :exclusions [cljsjs/react]]
-                 [cljsjs/react-datepicker "0.55.0-0" :exclusions [cljsjs/react]]
-                 [com.degel/sodium "0.7.0" :exclusions [cljsjs/react]]]
+                 [cljsjs/react-datepicker "0.55.0-0" :exclusions [cljsjs/react]]]
 
   :plugins [[lein-environ "1.1.0"]
             [lein-cljsbuild "1.1.7"]
             [lein-ancient "0.6.14"]
             [cider/cider-nrepl "0.15.1"]]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
   :min-lein-version "2.5.0"
 
   :clean-targets ^{:protect false}
